fix: dark mode

--- a/base.css
+++ b/base.css
@@ -2,12 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #fff;
-  color: #000;
 }
 
 html,
 body {
+  background-color: #fff;
+  color: #000;
   width: 90%;
   margin: 0 auto;
 }
@@ -20,7 +20,6 @@ body {
 .header__left {
   width: 50%;
   margin-left: 90px;
-  color: #000;
 }
 .header__left--head {
   font-size: 36px;
@@ -33,7 +32,6 @@ body {
   font-family: Poppins, sans-serif;
   line-height: 27px;
   margin-right: 90px;
-  color: #000;
 }
 .header__right--head {
   font-weight: 600;
@@ -43,6 +41,11 @@ body {
   font-size: 14px;
   font-weight: 400;
   text-align: justify;
+}
+
+html {
+  background-color: #fff;
+  color: #000;
 }
 
 .main {
@@ -97,11 +100,6 @@ body {
   margin-top: 100px;
 }
 
-.section-dark {
-  background-color: #000 !important;
-  color: #fff !important;
-}
-
 /* Extra small devices (phones, 600px and down) */
 /* Small devices (portrait tablets and large phones, 600px and up) */
 /* Medium devices (landscape tablets, 768px and up) */
@@ -109,8 +107,9 @@ body {
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 .toggle {
   position: absolute;
-  top: 100px;
-  left: 100px;
+  z-index: 1;
+  top: 10px;
+  left: 10px;
 }
 .toggle [type=checkbox]:not(:checked),
 .toggle [type=checkbox]:checked {
@@ -157,4 +156,9 @@ body {
 .toggle [type=checkbox]:checked + label:before {
   background-color: #72da67 !important;
   border-color: #72da67 !important;
+}
+
+.section-dark {
+  background-color: #000 !important;
+  color: #fff !important;
 }
